# board_game_rules_assistant

./: .gitignore  Extract_Raw_Text_From_PDF_Files.py  README.md  agent.py  app.py  board_game_agent.py  custom_react_agent.py  pyproject.toml  requirements.txt
deprecated/: app.py  board_game_agent.py  test_board_game_agent.py  tools.py
pages/: ReACT_Agent_Framework.py
tests/: answer_benchmarks.py  test_board_game_agent.py  test_react_agent.py  test_utility_functions.py
text/: dice_throne.txt  moonrakers.txt  perch.txt  scythe.txt  spirit_island.txt  tokaido.txt  wingspan.txt
utils/: constants.py  create_logger.py  extract_raw_text_from_pdf_files.py  prompts.py  tools.py
